--- a/src/components/LandingPage/Hero/hero.scss
+++ b/src/components/LandingPage/Hero/hero.scss
@@ -14,6 +14,13 @@
         font-family: $orbitron;
         padding-top: 77px;
     }
+
+    &__group-images {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-end;
+        padding-top: 60px;
+    }
 }
 
 .navigation {
@@ -54,6 +61,58 @@
         &:hover {
             color: $primary;
             border-bottom: solid 2px $primary;
+        }
+    }
+}
+
+.images {
+    position: relative;
+    width: 57.75rem;
+    height: 32.938rem;
+
+    > :nth-child(1) {
+        z-index: 1;
+        position: absolute;
+        top: -5.5rem;
+        left: -6.7rem;
+    }
+
+    > :nth-child(2) {
+        z-index: 0;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+    }
+}
+
+.group-images {
+    &__button {
+        position: relative;
+        overflow: hidden;
+        height: 11vw;
+        width: 11vw;
+        z-index: 5;
+
+        > :nth-child(1) {
+            width: 50vw;
+        }
+
+        > :nth-child(1) textPath {
+            font-size: 40px;
+            font-family: sans-serif;
+            text-transform: uppercase;
+            letter-spacing: 20px;
+            fill: #111;
+            background: #333;
+        }
+
+        .arrow-down-container {
+            position: absolute;
+            left: calc(5.5vw - 18px);
+            top: calc(5.5vw - 20px);
+            z-index: 10;
+            height: fit-content;
+            width: fit-content;
         }
     }
 }
