--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,34 @@
 @use "../src/scss/" as *;
+
 .App {
-  text-align: center;
-  background-color: $background;
+    text-align: center;
+    background-color: $background;
+}
+
+.button {
+    position: relative;
+    overflow: hidden;
+    height: 11vw;
+    width: 11vw;
+    z-index: 5;
+
+    > :nth-child(1) {
+        width: 50vw;
+    }
+
+    > :nth-child(1) textPath {
+        font-size: 40px;
+        font-family: $open-sans;
+        fill: #111;
+        background: #333;
+    }
+
+    .arrow-down-container {
+        position: absolute;
+        left: calc(5.5vw - 18px);
+        top: calc(5.5vw - 20px);
+        z-index: 10;
+        height: fit-content;
+        width: fit-content;
+    }
 }
