--- a/src/components/LandingPage/Hero/hero.scss
+++ b/src/components/LandingPage/Hero/hero.scss
@@ -29,7 +29,7 @@
 
     &__title {
         font-family: $orbitron;
-        font-size: $title;
+        font-size: $headline5;
         cursor: pointer;
 
         > * {
@@ -53,7 +53,7 @@
 
     &__subtitle {
         font-family: $orbitron;
-        font-size: $subtitle;
+        font-size: 18px;
         border-bottom: solid 2px black;
         width: 80px;
         cursor: pointer;
