--- a/src/components/Slider/slider.scss
+++ b/src/components/Slider/slider.scss
@@ -46,6 +46,10 @@
                         padding-bottom: 8px;
                         font-weight: bold;
                     }
+
+                    & .title-position {
+                        color: #645e58;
+                    }
                 }
             }
         }
